--- a/css/layout.css
+++ b/css/layout.css
@@ -16,6 +16,7 @@ main {
   background-color: whitesmoke;
 }
 
+/*
 aside {
   position: relative;
   padding: 8px 16px;
@@ -23,15 +24,34 @@ aside {
   width: 20vw;
   height: auto;
   float: right;
-
-  dt {
-    font-weight: bold;
-  }
-
-  dd {
-    padding: 0 10px;
-  }
 }
+
+dt {
+  font-weight: bold;
+}
+
+dd {
+  padding: 0 10px;
+}
+*/
+
+aside {
+  position: relative;
+  padding: 8px 16px;
+  margin: 0;
+  width: 20vw;
+  height: auto;
+  float: right;
+}
+
+aside dt {
+  font-weight: bold;
+}
+
+aside dd {
+  padding: 0 10px;
+}
+
 
 footer {
   padding: 1vw;
@@ -108,7 +128,17 @@ footer {
   }
 }
 
+
 @media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
   .topnav.responsive {
     position: relative;
   }
@@ -134,3 +164,33 @@ footer {
     flex-direction: column;
   }
 }
+
+
+
+/*
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .gallery-container {
+    width: 100%;
+  }
+
+  .gallery-grid {
+    display: flex;
+    flex-direction: column;
+  }
+}*/
